# trajopt

./: .gitignore  README.md
trajopt/: CMakeLists.txt  package.xml  setup.py
trajopt/include/trajopt/: numpy_utils.hpp  problem_description.hpp
trajopt/src/: problem_description.cpp  trajoptpy.cpp
trajopt_examples/: CMakeLists.txt
trajopt_examples/assets/xarm6/: xarm6_with_gripper.srdf  xarm6_with_gripper.urdf
trajopt_examples/config/: pick_and_place_plan.rviz  pp.urdf  test_plan.json
trajopt_examples/launch/: basic_cartesian_plan.launch  pick_and_place_plan.launch  test_trajopt.launch
trajopt_examples/src/: basic_cartesian_plan.cpp  test_trajopt.cpp
trajopt_python/: sample_trajoptpy.py
trajopt_python/trajoptpy/: __init__.py
trajopt_ros/: CMakeLists.txt  package.xml
trajopt_ros/assets/xarm6/: robot.xml  xarm6_with_gripper.srdf  xarm6_with_gripper.urdf  xarm6_with_gripper_ft_sensor.srdf  xarm6_with_gripper_ft_sensor.urdf
trajopt_ros/config/: basic_cartesian.json  ferl.json  pick_and_place_plan.rviz  trajopt.json
trajopt_ros/include/trajopt_ros/: trajopt_action_server.h
trajopt_ros/launch/: trajopt_ros.launch
trajopt_ros/src/: trajopt_action_server.cpp
trajopt_ros/srv/: GetTrajFromTrajOpt.srv
